// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a List control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#ffe11a",
    }
  }
>
  <styled.ul
    alternating={false}
    className="ui-list"
    style={Object {}}
  >
    <li
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id="0"
      key="0"
      selected={false}
    >
      some list item
    </li>
  </styled.ul>
</ThemeProvider>
`;

exports[`Test making List control invisible 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#ffe11a",
    }
  }
>
  <styled.ul
    alternating={false}
    className="ui-list"
    style={Object {}}
  >
    <li
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id="0"
      key="0"
      selected={false}
    >
      some list item
    </li>
  </styled.ul>
</ThemeProvider>
`;

exports[`Test retrieval of List props object 1`] = `
Object {
  "alternating": false,
  "children": null,
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onAdd": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "unselect": false,
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the creation of a List control container 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#ffe11a",
    }
  }
>
  <styled.ul
    alternating={true}
    className="ui-list"
    style={Object {}}
  >
    <li
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id="0"
      key="0"
      selected={false}
    >
      some list item
    </li>
  </styled.ul>
</ThemeProvider>
`;
